# forge-point

./: .gitignore  CMakeLists.txt  README.md  build.ps1  run.ps1  run_tests.ps1
src/: interfaces.hpp  main.cpp
src/app/: app.cpp  app.hpp  command_handler.cpp  command_handler.hpp  command_registry.cpp  command_registry.hpp  confirmation_guard.cpp  confirmation_guard.hpp  debug_overlay.cpp  debug_overlay.hpp  logger.cpp  logger.hpp  rotating_file_logger.cpp  rotating_file_logger.hpp  transfer_tracker.cpp  transfer_tracker.hpp
src/core/: cpu_detector.cpp  cpu_detector.hpp  gpu_detector.cpp  gpu_detector.hpp  http_client.cpp  http_client.hpp  llama_downloader.cpp  llama_downloader.hpp  llama_server_manager.cpp  llama_server_manager.hpp  platform_utils.cpp  platform_utils.hpp  process_supervisor.cpp  process_supervisor.hpp  string_utils.cpp  string_utils.hpp
src/data/: hf_cache_scanner.cpp  hf_cache_scanner.hpp  hf_client.cpp  hf_client.hpp
src/ui/: home_menu.cpp  home_menu.hpp  main_layout.hpp  welcome_screen.cpp  welcome_screen.hpp
tests/component/: menu_navigation_test.cpp
tests/unit/: command_handler_test.cpp  command_registry_test.cpp  confirmation_guard_test.cpp  transfer_tracker_test.cpp
